# wlo-topic-assistant

./: .gitignore  Dockerfile  README.md  build.sh  flake.nix  overrides.nix  pyproject.toml  requirements.txt  runPrediction.sh  runService.sh  setup.py
pkgs/: treelib.nix
src/: topic_assistant.py  topic_assistant2.py  webservice.py
src/wlo_topic_assistant/: generate_assistants.py  topic_assistant.py  webservice.py
wlo_topic_assistant/: eval.py  eval.py~  topic_assistant.ipynb  topic_assistant2.py  webservice.py  webservice.py~
