[tool.poetry]
name = "wlo-topic-assistant"
version = "0.1.0"
description = "A utility to map arbitrary text to the WLO/OEH topics vocabulary based on keyword matching."
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "wlo_topic_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
CherryPy = "^18.8.0"
rdflib = "^6.3.2"
treelib = "^1.6.4"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
torch = "~1.13.1"


[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]

[tool.poetry.scripts]
wlo-topic-assistant = 'wlo_topic_assistant.webservice:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
